--- a/src/app/component/discover-brands/discover-brands.component.html
+++ b/src/app/component/discover-brands/discover-brands.component.html
@@ -21,6 +21,9 @@
         <a routerLink="/discover/brands/level/one/2/causes" class="btn btn-warning btn-lgg">Donate Time Or Money To
           Causes</a>
       </div>
+      <div class="col-md-8 mt-4">
+        <a routerLink="/discount/list" class="btn btn-warning btn-lgg">Discount List</a>
+      </div>
     </div>
   </div>
 
