--- a/src/app/buyer/myaccount/myaccount.component.html
+++ b/src/app/buyer/myaccount/myaccount.component.html
@@ -19,7 +19,7 @@
 
           <div class="mt-5 d-grid gap-2 mx-auto col-5">
             <a class="btn btn-warning btn-lg" routerLink="/u/change/password">Change Password</a>
-            <a class="btn btn-warning btn-lg mt-3" routerLink="/u/change/membership/details">Change Membership
+            <a class="btn btn-warning btn-lg mt-3" routerLink="/u/change/membership/details"> Membership
               Details</a>
             <a class="btn btn-warning btn-lg mt-3" routerLink="/u/my/orders">My Order History</a>
           </div>
