--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,14 @@ body {
   font-family: HeroNew !important;
 }
 
+.font_family {
+  font-family: HeroNewExtraBlack;
+}
+
+a {
+  cursor: pointer;
+}
+
 .discount-light-green {
   background-color: #F2F9DC !important;
   color: #ccc !important;
@@ -118,4 +126,13 @@ ul {
 a {
   text-decoration: none;
   color: #000;
+}
+
+
+.loading {
+  position: absolute;
+  top: -2px;
+  z-index: 1000;
+  margin-left: 50%;
+  // margin-right: 50%;
 }
