--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
-<div [@myAnimation]="o.isActivated ? o.activatedRoute : ''">
-  <router-outlet #o="outlet"></router-outlet>
-</div>
+
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
+<ngx-ui-loader></ngx-ui-loader>
