--- a/src/app/buyer/login/login.component.html
+++ b/src/app/buyer/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<div class="container-fluid bg-custom">
+  <div class="container h-100">
+    <div class="row h-100">
+      <div class="col-md-5 mx-auto p-2 d-flex _logbox">
+        <div class="box">
+          <h1 class="display-6 fw-bold text-center mb-2 heading">Log In </h1>
+          <div style="border-bottom: 5px solid #FFE01D; width: 120px; margin: 0 auto;"></div>
+
+
+          <div class="form-group">
+            <label></label>
+            <input type="email" [(ngModel)]="email" class="form-control" placeholder="Your Email">
+          </div>
+
+          <div class="form-group">
+            <label></label>
+            <input type="password" [(ngModel)]="pass" class="form-control" placeholder="Your Password">
+          </div>
+
+
+          <div class="d-grid gap-2 mx-auto col-7 mt-3">
+            <button type="button" (click)="login()" class="btn btn-warning btn-lg">Sign In</button>
+
+            <a routerLink="/vendor/forgot/password"
+              class="btn btn-link text-center text-dark text-decoration-none">Forgot Password?</a>
+
+            <a class="btn btn-link mt-3 text-dark fs-5 fw-bold font_family" routerLink="/u/signup">Start Your
+              Membership</a>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
