--- a/src/app/buyer/signup/signup.component.html
+++ b/src/app/buyer/signup/signup.component.html
@@ -1,1 +1,94 @@
-<p>signup works!</p>
+<div class="container-fluid bg-custom">
+  <div class="container h-100">
+    <div class="row h-100">
+      <div class="col-md-5 mx-auto p-2 d-flex _logbox">
+        <div class="box">
+          <h1 class="display-6 fw-bold text-center mb-2 heading">Membership Sign Up </h1>
+          <div style="border-bottom: 5px solid #FFE01D; width: 320px; margin: 0 auto;"></div>
+
+          <div class="w-80">
+            <p class="text-dark fs-6 fw-bold text-center mt-4 HeroNew">
+              Thank you so much for signing up as a Member.
+            </p>
+
+            <p class="text-dark fs-6 fw-bold text-center mt-1 font_family">
+              You will get 30 days free trial and no Credit/Debit Card required. You will be charged $9/mo or
+              $39/yr with a valid promo code after the trial ended.
+            </p>
+
+            <p class="text-dark fs-6 fw-bold text-center mt-1 HeroNew">
+              You must be a Member to place orders.
+            </p>
+
+            <p class="text-dark fs-6 fw-bold text-center mt-1 HeroNew">
+              You can cancel your Membership at any time.
+            </p>
+          </div>
+
+
+          <div class="form-group">
+            <label>First Name</label>
+            <input type="text" [(ngModel)]="fname" class="form-control" placeholder="First Name">
+          </div>
+
+          <div class="form-group">
+            <label>Last Name</label>
+            <input type="text" [(ngModel)]="lname" class="form-control" placeholder="Last Name">
+          </div>
+
+          <div class="form-group">
+            <label>Email</label>
+            <input type="email" [(ngModel)]="email" class="form-control" placeholder="Your Email">
+          </div>
+
+          <div class="form-group">
+            <label>Create Password</label>
+            <input type="password" [(ngModel)]="pass" class="form-control" placeholder="Create Password">
+          </div>
+
+          <div class="form-group">
+            <label>Street Address</label>
+            <input type="text" [(ngModel)]="street" class="form-control" placeholder="Street Address">
+          </div>
+
+          <div class="form-group">
+            <label>City</label>
+            <input type="text" [(ngModel)]="city" class="form-control" placeholder="City">
+          </div>
+
+          <div class="form-group">
+            <label>State</label>
+            <input type="text" [(ngModel)]="state" class="form-control" placeholder="State">
+          </div>
+
+          <div class="form-group">
+            <label>Zip</label>
+            <input type="text" [(ngModel)]="zip" class="form-control" placeholder="Zip">
+          </div>
+
+          <div class="form-group">
+            <label>Phone Number</label>
+            <input type="text" [(ngModel)]="phone" class="form-control" placeholder="Phone Number">
+          </div>
+
+          <hr />
+
+          <div class="form-group">
+            <label>Promo Code (optional)</label>
+            <input type="text" [(ngModel)]="promo" class="form-control" placeholder="Promo Code">
+          </div>
+
+
+          <div class="d-grid gap-2 mx-auto col-7 mt-4">
+            <button type="button" (click)="login()" class="btn btn-warning btn-lg">Start Membership</button>
+
+
+            <a class="btn btn-link mt-3 text-dark fs-6" routerLink="/u/login">Already Have An Account? Login</a>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
