--- a/src/app/component/level-three/level-three.component.html
+++ b/src/app/component/level-three/level-three.component.html
@@ -10,8 +10,34 @@
 
           <ul class="mt-4 text-left" *ngIf="leaderboards && leaderboards.length > 0">
             <li *ngFor="let item of leaderboards" class="text-left mb-2"><a style="text-align: left;"
-                class="text-left btn btn-link text-dark text-decoration-none"
-                routerLink="/leaderboard/brands/list/{{ item.slug }}">{{ item.lb_three_name }}</a></li>
+                class="text-left btn btn-link text-dark text-decoration-none font_family"
+                routerLink="/leaderboard/brands/list/{{ item.slug }}">{{ item.lb_three_name }}</a>
+
+
+              <div class="text-secondary">
+                Subscribers: {{ item.buyers_no ?? 0 }}
+              </div>
+
+              <div *ngIf="item.discount >= 5 && item.discount <= 15" class="discount-light-green-level">Highest
+                Discount:
+                {{  item.discount }}%
+              </div>
+
+              <div *ngIf="item.discount >= 16 && item.discount <= 30" class="discount-light-green-second-level">Highest
+                Discount:
+                {{  item.discount }}%
+              </div>
+
+              <div *ngIf="item.discount >= 30 && item.discount <= 50" class="discount-dark-green-second-level">Highest
+                Discount:
+                {{  item.discount }}%
+              </div>
+
+              <div *ngIf="item.discount > 50" class="discount-dark-green-level">Highest Discount: {{  item.discount }}%
+              </div>
+
+
+            </li>
           </ul>
 
           <p class="fw-bold mt-5 fs-5" *ngIf="!loading && leaderboards && leaderboards.length == 0">Sorry No data
