--- a/src/app/component/preview-discount/preview-discount.component.html
+++ b/src/app/component/preview-discount/preview-discount.component.html
@@ -17,24 +17,24 @@
 
       </div>
       <div class="col-md-5">
-        <h2 class="fs-3 fw-bold heading">{{ product.name }}</h2>
-        <h3 style="margin-top: -14px;"><a class=" text-warning fw-bold text-decoration-none" style="cursor: pointer;"
+        <h2 class="fs-4 fw-bold heading">{{ product.name }}</h2>
+        <h3><a class=" text-warning fw-bold text-decoration-none" style="cursor: pointer;"
             routerLink="/storefront/{{ product.brand }}">
             {{ product.brand }}</a>
         </h3>
-        <h2 class="fw-normal">${{ price }}</h2>
-        <h2 class="fw-bold" style="margin-top: -14px;">Current Discount: {{ discount }}% </h2>
+        <h2 class="fw-normal fs-4 mt-2">${{ price }}</h2>
+        <h2 class="fw-bold fs-5" style="margin-top: 6px;">Current Discount: {{ discount }}% </h2>
         <!-- <h4 class="fw-bold" style="margin-top: -14px;" *ngIf="shipping_cost != '0' || shipping_cost != ''">Shipping:
           ${{ shipping_cost }}
         </h4> -->
         <!-- <h4 class="fw-bold" style="margin-top: -14px;" *ngIf="shipping_cost == '0' || shipping_cost == ''">Shipping is
           <span class="text-warning fw-bold">Free</span>.
         </h4> -->
-        <h1 class="fw-bold">
+        <h1 class="fw-bold fs-2 mt-3">
           ${{ discount_price }}
         </h1>
-        <h3 class="fw-bold">0 Sales</h3>
-        <h3 class="fw-bold" style="margin-top: -14px;">0 Different Customers</h3>
+        <h3 class="fw-bold fs-5">0 Sales</h3>
+        <h3 class="fw-bold fs-5">0 Different Customers</h3>
         <h3 *ngIf="product.exclu_discount" style="border-bottom: 4px solid #FFE01D; width: 230px;">Exclusive Good Yellow
           Discount </h3>
         <h3 *ngIf="product.exclus_product" style="margin-top: -14px; border-bottom: 4px solid #FFE01D; width: 200px;">
