--- a/src/app/component/preview-product/preview-product.component.html
+++ b/src/app/component/preview-product/preview-product.component.html
@@ -23,27 +23,28 @@
 
       </div>
       <div class="col-md-5">
-        <h2 class="fs-3 fw-bold heading">{{ product.name }}</h2>
-        <h3 style="margin-top: -14px;"><a class=" text-warning fw-bold text-decoration-none" style="cursor: pointer;"
+        <h2 class="fs-4 fw-bold heading">{{ product.name }}</h2>
+        <h3 style=""><a class=" text-warning fw-bold text-decoration-none" style="cursor: pointer;"
             routerLink="/storefront/{{ product.brand }}">
             {{ product.brand }}</a>
         </h3>
-        <h2 class="fw-normal">${{ price }}</h2>
-        <h2 class="fw-bold" style="margin-top: -14px;">Current Discount: {{ discount }}% </h2>
-        <h4 class="fw-bold" style="margin-top: -14px;" *ngIf="shipping_cost != '0' || shipping_cost != ''">Shipping:
+        <h2 class="fw-normal fs-4 mt-2">${{ price }}</h2>
+        <h2 class="fw-bold fs-5" style="margin-top: 6px;">Current Discount: {{ discount }}% </h2>
+        <h4 class="fw-bold fs-5" *ngIf="shipping_cost != '0' || shipping_cost != ''">Shipping:
           ${{ shipping_cost }}
         </h4>
-        <h4 class="fw-bold" style="margin-top: -14px;" *ngIf="shipping_cost == '0' || shipping_cost == ''">Shipping is
+        <h4 class="fw-bold fs-5" *ngIf="shipping_cost == '0' || shipping_cost == ''">Shipping is
           <span class="text-warning fw-bold">Free</span>.
         </h4>
-        <h1 class="fw-bold">
+        <h1 class="fw-bold fs-2 mt-3">
           ${{ discount_price }}
         </h1>
         <!-- <h3 class="fw-bold">23 Sales</h3>
         <h3 class="fw-bold" style="margin-top: -14px;">18 Different Customers</h3> -->
-        <h3 *ngIf="product.exclu_discount" style="border-bottom: 4px solid #FFE01D; width: 230px;">Exclusive Good Yellow
+        <h3 class="fs-6" *ngIf="product.exclu_discount" style="border-bottom: 4px solid #FFE01D; width: 230px;">
+          Exclusive Good Yellow
           Discount </h3>
-        <h3 *ngIf="product.exclus_product" style="margin-top: -14px; border-bottom: 4px solid #FFE01D; width: 200px;">
+        <h3 class="fs-6" *ngIf="product.exclus_product" style="border-bottom: 4px solid #FFE01D; width: 200px;">
           Exclusively On Good Yellow</h3>
 
         <div class="mt-4">
@@ -62,7 +63,8 @@
           </div>
           <div class="col-12">
             <div class="d-grid gap-2 col-4">
-              <button [disabled]="disabled" type="button" class="btn btn-warning mt-3">Add To Cart</button>
+              <button [disabled]="disabled" type="button" class="btn btn-warning mt-3">Add To
+                Cart</button>
             </div>
 
           </div>
@@ -70,6 +72,11 @@
         <p style="text-decoration: underline; margin-top: 30px;">Important Details</p>
         <p class="mt-3">
           {{ product.important_details }}
+        </p>
+
+        <h4 class="font_family mt-4">Description</h4>
+        <p class="mt-2">
+          {{ product?.desc }}
         </p>
       </div>
       <div class="col-md-1"></div>
