--- a/src/app/component/storefront/storefront.component.html
+++ b/src/app/component/storefront/storefront.component.html
@@ -29,6 +29,8 @@
       </div>
       <div class="col-md-9 mt-4 main_part">
         <h1 class="fs-1 fw-bold heading brandName">{{ vendorData.brand }} </h1>
+        <p class="mt-2 fs-6 text-secondary">{{ vendorData.total_subscribers }} subscribers</p>
+
         <p class="badge bg-danger fs-6">{{ vendorData.private === 1 ? '🔒 Private' : '' }}</p>
         <p class="fw-bold fs-5 mb-4">Highest Discount: <span class="text-warning">{{ vendorData.max_discount }}%</span>
         </p>
